adding first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheldron Project-one</title>
+    <link rel="stylesheet" href="style/style1.css">
 </head>
 <body>
-    
+    <div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Accusamus nostrum nesciunt, suscipit, inventore sint, accusantium totam consequatur dolore saepe repellat molestiae magni atque.
+             Odio veniam aliquid id laudantium numquam doloremque.
+        </p>
+    </div>
 </body>
 </html>
